# six

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml  deploy.yml
chord/: Cargo.toml
chord/src/: beam_attachement.rs  beam_attachment.rs  lib.rs  pitch_kind.rs
chord/src/components/: beam.rs  chord.rs  mod.rs  space_time_warp.rs
chord/src/resources/: mod.rs
chord/src/systems/: apply_space_time_warp.rs  draft_beam.rs  mod.rs  print_beam.rs  print_chord.rs  print_cursor.rs  record_space_time_warp.rs  space_beam.rs  update_timing.rs
entity/: Cargo.toml
entity/src/: lib.rs
pitch/: Cargo.toml
pitch/src/: lib.rs
render/: Cargo.toml
render/src/: jsfrac.rs  lib.rs  native_six_dom.rs  state.rs  sys_delete_orphans.rs  sys_print_meta.rs  sys_print_song.rs
render/src/components/: beam_for_chord.rs  children.rs  css.rs  cursor.rs  flag_attachment.rs  mod.rs  parent.rs  song.rs
render/src/systems/: delete_orphans.rs  mod.rs  print_meta.rs  print_song.rs  update_keep_spacing.rs  update_world_bboxes.rs
rest_note_chord/: Cargo.toml
rest_note_chord/src/: beam.rs  context.rs  lib.rs  rest_note_chord.rs  sys_implicit_rests.rs  sys_print_cursors.rs  sys_print_rnc.rs  sys_relative_spacing.rs  sys_space_time_warp.rs  sys_update_rnc_timing.rs
rhythm/: Cargo.toml
rhythm/src/: bar.rs  bar_child.rs  duration.rs  lib.rs  lifetime.rs  metre.rs  rhythmic_beaming.rs  spacing.rs  start.rs
rhythm/src/components/: bar.rs  mod.rs  spacing.rs
staff/: Cargo.toml
staff/src/: between_bars.rs  lib.rs  sys_break_into_lines.rs  sys_print_between_bars.rs  sys_print_staff.rs  sys_print_staff_lines.rs  sys_update_bar_numbers.rs  sys_update_context.rs  sys_update_starts.rs
staff/src/components/: beam.rs  beam_for_chord.rs  between_bars.rs  children.rs  chord.rs  context.rs  cursor.rs  flag_attachment.rs  line_of_staff.rs  mod.rs  signature.rs  song.rs  staff.rs
staff/src/resources/: keep_spacing.rs  mod.rs  root.rs
staff/src/systems/: apply_space_time_warp.rs  break_into_lines.rs  maintain_autorests.rs  mod.rs  print_beam.rs  print_between_bar.rs  print_chord.rs  print_cursor.rs  print_signature.rs  print_staff.rs  print_staff_lines.rs  record_space_time_warp.rs  space_beam.rs  update_context.rs  update_timing.rs
stencil/: Cargo.toml
stencil/gen_corefont/: Makefile  README.txt  core.json
stencil/src/: corefont.rs  lib.rs  pdf.rs  snapshot.rs  stencil_map.rs  sys_update_world_bboxes.rs  util.rs
stencil/src/components/: mod.rs  parent.rs  stencil.rs  stencil_map.rs  world_bbox.rs
webapp/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
webapp/src/: about.css  about.tsx  app.css  app.module.scss  app.tsx  app_hotkeys.tsx  between.tsx  between_bar_edit.tsx  between_bar_popover.tsx  colours.scss  error_boundary.tsx  file.tsx  frac.ts  global.scss  hello_renderer.tsx  hotkeys.tsx  icons.js  index.js  index.tsx  intrinsic_elements.d.ts  lazy_tooltip.tsx  load_pdf.tsx  localStorage.tsx  local_storage.tsx  meta.css  meta.tsx  navbar.tsx  note_insert_menu.tsx  note_popover.tsx  reconciler.tsx  renderer.tsx  sheet_edit.tsx  sheet_music_view.tsx  split_duration_into_parts.ts  store.ts  toolbar.css  toolbar.tsx  toolbar_icons.ts
webapp/src/blueprint/: icons.js  lazy_tooltip.tsx  theme.css  theme.scss  tooltip.tsx
webapp/src/cards/: about.css  about.module.scss  about.tsx  meta.css  meta.module.scss  meta.tsx
webapp/src/editor/: between.module.scss  between.tsx  between_bar_popover.tsx  hotkeys.tsx  index.module.scss  index.tsx  keyboard.module.scss  keyboard.tsx  note_insert_menu.tsx  note_popover.tsx  signature.module.scss  signature.tsx  signature_popover.tsx  snap_cursor.ts  split_duration_into_parts.ts
webapp/src/renderer/: index.module.scss  index.tsx  intrinsic_elements.d.ts  reconciler.ts
webapp/src/scene/: index.module.scss  index.tsx  jsx_ext.d.ts  reconciler.ts  stencil_view.tsx
webapp/src/sheet/: index.tsx  reconciler.ts
webapp/src/store/: actions.ts  index.ts  reducers.ts  state.ts  versions.ts
webapp/static/: index.html
