[package]
name = "render"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "A DOM-based interface to render sheet music"
repository = "https://github.com/jnetterf/six"

[lib]
crate-type = ["cdylib"]

[dependencies]
entity = { path = "../entity" }
rest_note_chord = { path = "../rest_note_chord" }
rhythm = { path = "../rhythm" }
staff = { path = "../staff" }
stencil = { path = "../stencil" }
kurbo = "0.5.8"
wasm-bindgen = "0.2.58"

[dependencies.num-rational]
version = "0.2.3"
default-features = false
