[package]
name = "rest_note_chord"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhythm = {path = "../rhythm"}
stencil = {path = "../stencil"}
kurbo = "0.5.6"
