[package]
name = "rest_note_chord"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Render rest, notes, and chords"
repository = "https://github.com/jnetterf/six"

[dependencies]
rhythm = {path = "../rhythm"}
stencil = {path = "../stencil"}
entity = {path = "../entity"}
pitch = {path = "../pitch"}
kurbo = "0.5.11"

[dependencies.num-rational]
version = "0.2.4"
default-features = false
