[package]
name = "rhythm"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

[dependencies]
stencil = {path = "../stencil"}
kurbo = "0.5.6"

[dependencies.num-rational]
version = "0.2.2"
default-features = false

[dependencies.num-traits]
version = "0.2.10"
default-features = false

[dependencies.num-integer]
version = "0.1.41"
default-features = false
