[package]
name = "rhythm"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Types and algorithms for spelling and managing rhythms and meter"
repository = "https://github.com/jnetterf/six"

[dependencies]
entity = {path = "../entity"}

[dependencies.num-rational]
version = "0.2.4"
default-features = false

[dependencies.num-traits]
version = "0.2.11"
default-features = false

[dependencies.num-integer]
version = "0.1.42"
default-features = false
