[package]
name = "staff"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Renders a staff"
repository = "https://github.com/jnetterf/six"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhythm = {path = "../rhythm"}
stencil = {path = "../stencil"}
entity = {path = "../entity"}
kurbo = {git = "https://github.com/linebender/kurbo", rev = "680b4a94d11db6d59e2be323dee721d9bd25ae56"}
wasm-bindgen = "0.2.58"

[dependencies.num-rational]
version = "0.2.2"
default-features = false
