[package]
name = "staff"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Renders a staff"
repository = "https://github.com/jnetterf/six"

[dependencies]
rest_note_chord = {path = "../rest_note_chord"}
rhythm = {path = "../rhythm"}
stencil = {path = "../stencil"}
entity = {path = "../entity"}
pitch = {path = "../pitch"}
kurbo = "0.5.8"
wasm-bindgen = "0.2.58"

[dependencies.num-rational]
version = "0.2.3"
default-features = false
