[package]
name = "staff"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Renders a staff"
repository = "https://github.com/jnetterf/six"

[dependencies]
rhythm = {path = "../rhythm"}
stencil = {path = "../stencil"}
pitch = {path = "../pitch"}
kurbo = "0.5.11"
wasm-bindgen = "0.2.59"

[dependencies.num-rational]
version = "0.2.4"
default-features = false

[dependencies.specs]
version = "0.16.1"
default-features = false
