[package]
name = "stencil"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "A type which represents a rendered object, composed of a bezier path and a bounding box."
repository = "https://github.com/jnetterf/six"

[dependencies]
entity = {path = "../entity"}
kurbo = {git = "https://github.com/linebender/kurbo", rev = "680b4a94d11db6d59e2be323dee721d9bd25ae56"}
