[package]
name = "stencil"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "A type which represents a rendered object, composed of a bezier path and a bounding box."
repository = "https://github.com/jnetterf/six"

[dependencies]
entity = {path = "../entity"}
kurbo = "0.5.11"
deflate = "0.8.4"
base64 = "0.12.0"
